--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <img src="./0050.jpg">
 
         </div>
-        <h1>Futsal</h1>
-        <h2>Surgimento e Evolução</h2>
+        <h1>Basquete</h1>
+        <h2>Surgimento, Regras e Popularização</h2>
     </header>
 
     <main>
