--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
     <header>
         <div class="center">
-            <img src="./94.jpg">
-            <img src="./fundador.jpg">
-            <img src="./0050.jpg">
+            <img src="./263eb7f2fb1139afd438be02b75e1ed9.jpg">
+            <img src="./michael-jordan-net-worth-ftr.jpg">
+            <img src="./Naismith.jpg.jpg">
 
         </div>
         <h1>Basquete</h1>
