--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="center">
             <img src="./263eb7f2fb1139afd438be02b75e1ed9.jpg">
             <img src="./michael-jordan-net-worth-ftr.jpg">
-            <img src="./Naismith.jpg.jpg">
+            <img src="./Naismith.jpg">
 
         </div>
         <h1>Basquete</h1>
