--- a/pag2.html
+++ b/pag2.html
@@ -33,39 +33,43 @@
 
     <main>
         <section>
-            <h3>Copa do Mundo de Futsal da FIFA</h3>
+            <h3>NBA</h3>
             <p>
-               A Copa do Mundo de Futsal da FIFA é o pináculo do esporte, reunindo as melhores seleções nacionais de futsal de todo o mundo em uma competição intensa e emocionante. Realizado a cada quatro anos, o torneio é uma vitrine de habilidade, velocidade e técnica, proporcionando aos fãs uma experiência única.
+               A NBA, ou National Basketball Association, é a principal liga profissional de basquete do mundo. Fundada em 1946, a NBA tornou-se um ícone global do esporte, atraindo os melhores jogadores de basquete de todas as partes do planeta. Com 30 equipes, divididas entre as conferências Leste e Oeste, a liga oferece uma competição intensa durante a temporada regular, culminando nos emocionantes playoffs.
 
-O formato da competição envolve uma fase de qualificação intensa, onde equipes de diferentes continentes disputam vagas valiosas para representar suas nações. As seleções qualificadas convergem para o país-sede, onde a competição atinge seu ápice, culminando na coroação de uma equipe como campeã mundial.
+O destaque da NBA não se limita apenas às quadras. A liga incorpora um estilo de jogo dinâmico e atrativo, marcado por jogadas espetaculares, enterradas incríveis e arremessos de longa distância. Além disso, eventos como o All-Star Game e o famoso concurso de enterradas contribuem para a celebração do espetáculo e da habilidade dos jogadores.
 
-Com partidas eletrizantes, dribles habilidosos e gols espetaculares, a Copa do Mundo de Futsal da FIFA atrai a atenção de milhões de espectadores ao redor do globo. O evento não apenas destaca o talento individual, mas também enfatiza a importância do trabalho em equipe em um esporte dinâmico e tático.
+A NBA também se destaca por sua presença global, transmitindo jogos para fãs em todo o mundo e inspirando uma base de admiradores diversificada. As estrelas da NBA não são apenas atletas, mas ícones culturais que transcendem as fronteiras do esporte.
 
-Além de promover a paixão pelo futsal, a Copa do Mundo serve como uma plataforma para o intercâmbio cultural, reunindo torcedores de todas as partes do mundo para celebrar a diversidade e a universalidade do esporte. Cada edição da competição deixa uma marca duradoura na história do futsal, consolidando-se como um evento que transcende fronteiras e une fãs em uma celebração global do esporte de salão.
+Em resumo, a NBA não é apenas uma liga de basquete; é uma experiência esportiva que encapsula o talento, a emoção e a paixão que cativam fãs em todo o globo.
             </p>
         </section>
         <section>
-            <h3>UEFA Futsal Championship</h3>
+            <h3>FIBA Basketball World Cup</h3>
             <p>
-                O UEFA Futsal Championship, também conhecido como Euro de Futsal, é a principal competição de futsal da Europa, organizada pela União das Associações Europeias de Futebol (UEFA). Este torneio bienal reúne as melhores seleções nacionais de futsal do continente em uma emocionante batalha pela supremacia.
+                A FIBA Basketball World Cup, ou Copa do Mundo de Basquete da FIBA, é uma competição internacional que reúne as melhores seleções nacionais de basquete do mundo. Organizada pela Federação Internacional de Basquete (FIBA), a Copa do Mundo ocorre a cada quatro anos e representa um dos eventos mais prestigiados e aguardados no calendário esportivo global.
 
-O formato do campeonato envolve uma fase de qualificação, na qual as equipes competem para garantir sua vaga na fase final. Na etapa decisiva, as equipes qualificadas se enfrentam em uma competição acirrada, culminando na emocionante final que coroa a seleção campeã como a melhor equipe de futsal da Europa.
+A competição proporciona um palco para a exibição do mais alto nível de habilidade, estratégia e paixão pelo basquete. Seleções de todos os continentes se enfrentam em uma intensa batalha pelo título mundial, proporcionando aos fãs momentos emocionantes e inesquecíveis.
 
-Ao longo dos anos, o UEFA Futsal Championship tem proporcionado momentos memoráveis, destacando a habilidade técnica, a estratégia tática e a paixão pelo futsal. Além de celebrar o talento individual dos jogadores, o torneio também promove a camaradagem e a rivalidade saudável entre as nações europeias.
+Ao longo dos anos, a FIBA Basketball World Cup se tornou um campo de jogo para rivalidades históricas e surpresas espetaculares. Times de diferentes culturas e estilos de jogo se encontram, criando um ambiente verdadeiramente internacional que reflete a diversidade do esporte.
 
-Assim como sua contraparte no futebol, o Euro de Futsal não apenas oferece um espetáculo esportivo de alta qualidade, mas também desempenha um papel crucial no desenvolvimento e promoção do futsal em toda a Europa. Ao atrair a atenção dos fãs e proporcionar uma plataforma para os melhores jogadores do continente brilharem, o UEFA Futsal Championship contribui para o crescimento contínuo e a popularização do futsal em toda a região europeia.
+Além da glória do título, a Copa do Mundo de Basquete também serve como um importante evento classificatório para os Jogos Olímpicos, acrescentando ainda mais peso à competição. As estrelas do basquete internacional, muitas das quais também brilham na NBA, têm a oportunidade de representar orgulhosamente seus países e competir pelo reconhecimento como a melhor seleção do mundo.
+
+Em resumo, a FIBA Basketball World Cup é uma celebração do basquete global, unindo nações em uma competição apaixonante que eleva o esporte a novas alturas e proporciona momentos inesquecíveis para os fãs de todo o mundo.
             </p>
         </section>
         <section>
-            <h3>Copa Libertadores de Futsal</h3>
+            <h3>March Madness (NCAA Men's Division I Basketball Tournament)</h3>
             <p>
-                A Copa Libertadores de Futsal é o palco onde os melhores clubes sul-americanos se enfrentam em uma competição acirrada, demonstrando a maestria e habilidade no esporte. Inspirada na lendária competição de futebol, a versão de futsal da Copa Libertadores é um torneio emocionante que atrai equipes de elite, proporcionando aos fãs uma experiência única de intensidade e paixão esportiva.
+                O March Madness, oficialmente conhecido como NCAA Men's Division I Basketball Tournament, é um dos eventos mais emocionantes e aguardados no mundo do basquete universitário nos Estados Unidos. Organizado pela National Collegiate Athletic Association (NCAA), o torneio é realizado anualmente durante o mês de março e abril, envolvendo as melhores equipes universitárias da Divisão I.
 
-O formato do torneio envolve a participação de clubes campeões e vice-campeões das ligas nacionais de futsal dos países sul-americanos. Os times competem em uma série de fases, desde as eliminatórias até as emocionantes finais, onde apenas o melhor se consagrará campeão da Copa Libertadores de Futsal.
+O torneio ganhou o apelido "March Madness" devido à sua natureza frenética e emocionante, com jogos eliminatórios que ocorrem em ritmo acelerado, resultando em um campeão nacional em um curto período de tempo. Participam 68 equipes, determinadas por seleção e classificação, que competem em uma série de jogos eliminatórios até que apenas uma equipe seja coroada como campeã.
 
-Esta competição não apenas oferece momentos de grande destaque individual, com jogadores exibindo suas habilidades técnicas e táticas, mas também cria uma atmosfera única de rivalidade e camaradagem entre as nações sul-americanas. Ao longo dos anos, a Copa Libertadores de Futsal se tornou uma vitrine para o talento emergente e uma plataforma para o aprimoramento contínuo do esporte na região.
+O formato do torneio inclui quatro regiões geográficas, cada uma com seu conjunto de equipes. As vitórias garantem o avanço, enquanto as derrotas significam a eliminação. Os confrontos geram histórias incríveis de superações, surpresas e momentos dramáticos, cativando a atenção de fãs de esportes em todo o país.
 
-Assim, a Copa Libertadores de Futsal é muito mais do que uma competição; é uma celebração do futsal sul-americano, destacando a paixão, o comprometimento e a excelência que definem esse esporte dinâmico e emocionante na região.
+O March Madness não é apenas uma competição esportiva; é uma tradição cultural nos Estados Unidos. Milhões de fãs participam de competições de brackets (chaveamentos) prevendo os resultados dos jogos, e escritórios, escolas e grupos de amigos frequentemente organizam pools de apostas, tornando o torneio uma experiência social amplamente apreciada.
+
+Para os jogadores universitários, o March Madness representa a chance de brilhar nos holofotes nacionais, com performances notáveis muitas vezes impulsionando carreiras profissionais. A atmosfera única do torneio, combinada com o espírito competitivo e o drama dos jogos, solidificou o March Madness como um dos eventos mais emocionantes e icônicos no mundo do esporte universitário.
             </p>
         </section>
     </main>
