--- a/pag2.html
+++ b/pag2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <titl=e>Futsal: História e Mais</title>
+    <titl=e>Basquete: Surgimento e Mais</title>
     <link rel="stylesheet" href="index.css"
 </head>
 <body>
@@ -27,8 +27,8 @@
             <img src="./news-uefafutsalcup20052006-lit.jpg">
             <img src="trofeu-copa-libertadores-2023-fogaonet.jpg">
         </div>
-        <h1>Futsal</h1>
-        <h2>Campeonatos</h2>
+        <h1>Basquete</h1>
+        <h2>Surgimento, Regras e Popularização</h2>
     </header>
 
     <main>
