--- a/pag2.html
+++ b/pag2.html
@@ -23,9 +23,9 @@
 
     <header>
         <div class="center">
-            <img src="./futsal world cup trophy.png">
-            <img src="./news-uefafutsalcup20052006-lit.jpg">
-            <img src="trofeu-copa-libertadores-2023-fogaonet.jpg">
+            <img src="./unnamed.png">
+            <img src="./profile_vrt_raw_bytes_1587515366_10585.jpg">
+            <img src="download.png">
         </div>
         <h1>Basquete</h1>
         <h2>Surgimento, Regras e Popularização</h2>
