--- a/pag3.html
+++ b/pag3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <titl=e>Futsal: História e Mais</title>
+    <titl=e>Basquete: Surgimento e Mais</title>
     <link rel="stylesheet" href="index.css"
 </head>
 <body>
@@ -23,11 +23,11 @@
 
     <header>
         <div class="center">
-            <img src="./download.png">
-            <img src="./download.jpg">
-            <img src="./87652.png">
+            <img src="./celtics.jpg">
+            <img src="./lakers.png">
+            <img src="./Chicago_Bulls.png">
         </div>
-        <h1>Futsal</h1>
+        <h1>Basquete</h1>
         <h2>Times Importantes</h2>
     </header>
 
