--- a/pag2.html
+++ b/pag2.html
@@ -28,7 +28,7 @@
             <img src="download.png">
         </div>
         <h1>Basquete</h1>
-        <h2>Surgimento, Regras e Popularização</h2>
+        <h2>Campeonatos e Mais</h2>
     </header>
 
     <main>
